--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start -p $PORT",
+    "build": "next start",
+    "start": "next start -p $PORTggit",
     "heroku-postbuild": "npm run build"
+  
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
